Added vehicle endpoints
