# src/Api/Model/Vehicle.php
@@ -7,7 +7,6 @@ use Api\Validator\Vehicle as VehicleValidator;
 use Api\Repository\Vehicle as VehicleRepository;
 use Api\Repository\Vehicle\Type as TypeRepository;
 use Api\Repository\Vehicle\Brand as BrandRepository;
-use Api\Repository\Vehicle\Model as ModelRepository;
 use Api\Repository\Vehicle\Category as CategoryRepository;
 use Api\Exception\ValidatorException;
 
@@ -22,17 +21,15 @@ class Vehicle
     
     public function __construct(
         VehicleValidator $validator,
-        TypeRepository $typeRepository,
         BrandRepository $brandRepository,
-        ModelRepository $modelRepository,
         CategoryRepository $categoryRepository,
+        TypeRepository $typeRepository,
         VehicleRepository $repository
     ) {
         $this->validator            = $validator;
-        $this->typeRepository       = $typeRepository;
         $this->brandRepository      = $brandRepository;
-        $this->modelRepository      = $modelRepository;
         $this->categoryRepository   = $categoryRepository;
+        $this->typeRepository       = $typeRepository;
         $this->repository           = $repository;
     }
 
@@ -42,36 +39,29 @@ class Vehicle
 
         $this->validator->validate($vehicleData);
 
-        $type       = $vehicleData['type'];
         $brand      = $vehicleData['brand'];
-        $model      = $vehicleData['model'];
         $category   = $vehicleData['category'];
+        $type       = $vehicleData['type'];
         $plate      = $vehicleData['plate'];
-
-        $existsType = $this->typeRepository->findByName($type);
 
         $existsBrand = $this->brandRepository->findByName($brand);
 
-        $existsModel = $this->modelRepository->findByName($model);
-
         $existsCategory = $this->categoryRepository->findByName($category);
 
-        $existsPlate = $this->repository->findByPlate($plate);
+        $existsType = $this->typeRepository->findByName($type);
 
-        if (!$existsType) {
-            $exception->addMessage('type', 'The type must be registered in the vehicle type table.');
-        }
+        $existsPlate = $this->repository->findByPlate($plate);
 
         if (!$existsBrand) {
             $exception->addMessage('brand', 'The brand must be registered in the vehicle brand table.');
         }
          
-        if (!$existsModel) {
-            $exception->addMessage('model', 'The model must be registered in the vehicle model table.');
-        }
-
         if (!$existsCategory) {
             $exception->addMessage('category', 'The category must be registered in the vehicle category table.');
+        }
+
+        if (!$existsType) {
+            $exception->addMessage('type', 'The type must be registered in the vehicle type table.');
         }
 
         if ($existsPlate) {
