# src/Api/Validator/Vehicle.php
@@ -8,6 +8,9 @@ use Api\Enum\VehicleMessages;
 
 class Vehicle implements ValidatorInterface
 {
+    const MODEL_MAX_LEN = 50;
+    const PLATE_MAX_LEN = 20;
+
     public function validate(array $data)
     {
         $exception = new ValidatorException;
@@ -22,16 +25,17 @@ class Vehicle implements ValidatorInterface
             $exception->addMessage($field, VehicleMessages::NOT_BLANK);
         }
 
-        $field = 'model';
+        $field = 'category';
         if (!isset($data[$field]) || $data[$field] == '') {
             $exception->addMessage($field, VehicleMessages::NOT_BLANK);
         }
 
-        $field = 'category';
+        $field = 'model';
         if (!isset($data[$field]) || $data[$field] == '') {
             $exception->addMessage($field, VehicleMessages::NOT_BLANK);
         } else {
-            $this->validateUnicode($field, $data[$field], $exception, VehicleMessages::INVALID_CATEGORY);
+            $this->validateUnicode($field, $data[$field], $exception, VehicleMessages::INVALID_MODEL);
+            $this->validateMoreThan($field, $data[$field], self::MODEL_MAX_LEN, $exception);
         }
 
         $field = 'plate';
@@ -39,6 +43,7 @@ class Vehicle implements ValidatorInterface
             $exception->addMessage($field, VehicleMessages::NOT_BLANK);
         } else {
             $this->validateUnicode($field, $data[$field], $exception, VehicleMessages::INVALID_PLATE);
+            $this->validateMoreThan($field, $data[$field], self::PLATE_MAX_LEN, $exception);
         }
 
         if (count($exception->getMessages()) > 0) {
@@ -50,6 +55,13 @@ class Vehicle implements ValidatorInterface
     {
         if (htmlentities($fieldValue, ENT_QUOTES, 'UTF-8') != $fieldValue) {
             $exception->addMessage($fieldName, $message);
+        }
+    }
+
+    public function validateMoreThan($fieldName, $fieldValue, $limit, $exception)
+    {
+        if (mb_strlen($fieldValue) > $limit) {
+            $exception->addMessage($fieldName, sprintf(VehicleMessages::MORE_THAN, $limit));
         }
     }
 }
