# src/Api/Validator/Vehicle/Model.php
@@ -1,44 +1,0 @@
-<?php
-declare(strict_types=1);
-
-namespace Api\Validator\Vehicle;
-
-use Api\Exception\ValidatorException;
-use Api\Enum\VehicleMessages;
-use Api\Validator\ValidatorInterface;
-
-class Model implements ValidatorInterface
-{
-    const MODEL_MAX_LEN = 50;
-    
-    public function validate(array $data)
-    {
-        $exception = new ValidatorException;
-
-        $field = 'name';
-        if (!isset($data[$field]) || $data[$field] == '') {
-            $exception->addMessage($field, VehicleMessages::NOT_BLANK);
-        } else {
-            $this->validateUnicode($field, $data[$field], $exception, VehicleMessages::INVALID_MODEL);
-            $this->validateMoreThan($field, $data[$field], self::MODEL_MAX_LEN, $exception);
-        }
-
-        if (count($exception->getMessages()) > 0) {
-            throw $exception;
-        }
-    }
-
-    public function validateUnicode($fieldName, $fieldValue, $exception, $message)
-    {
-        if (htmlentities($fieldValue, ENT_QUOTES, 'UTF-8') != $fieldValue) {
-            $exception->addMessage($fieldName, $message);
-        }
-    }
-    
-    public function validateMoreThan($fieldName, $fieldValue, $limit, $exception)
-    {
-        if (mb_strlen($fieldValue) > $limit) {
-            $exception->addMessage($fieldName, sprintf(VehicleMessages::MORE_THAN, $limit));
-        }
-    }
-}
